# translator

./: .gitignore  LICENSE  README.md  SPEC.md  bench_results.md  pyproject.toml
src/translator/: app.py  bench.py  cli.py  clipboard.py  config.py  detect.py  hotkeys.py  input_box.py  paths.py  popup.py  service.py  setup_cli.py  startup_cli.py
src/translator/engines/: __init__.py  base.py  dictionary.py  fugumt.py  plamo.py  qwen_npu.py
